fix : 프로젝트 수정 시 구성원 변경이 안 되는 문제를 해결 (#149)